2009-12-02  Marek Habersack  <mhabersack@novell.com>

	* mod_mono.c: added new directive MonoTargetFramework which allows
	one to select which framework backend to start (2.0, 3.5 and 4.0
	with the first two being aliases).

2009-11-09  Marek Habersack  <mhabersack@novell.com>

	* mod_mono.c: implemented a list of URLs in the control panel,
	based on patch from Heiner Wolf <wolf.heiner@googlemail.com>,
	thanks!

2009-11-06  Marek Habersack  <mhabersack@novell.com>

	* mod_mono.c (fork_mod_mono_server): initialize supplementary
	group ids after forking. Patch from Philip Tricca
	<flihp@twobit.us>, thanks!

2009-09-21  Marek Habersack  <mhabersack@novell.com>

	* mod_mono.c: added new directive to disable hidden file/directory
	protection in the backend (MonoCheckHiddenFiles).

2009-08-24  Marek Habersack  <mhabersack@novell.com>

	* Makefile.am (mod_mono_la_CFLAGS): glib is no longer used

	* glib_compat.c, glib_compat.h: added. Compatibility glib
	functions/macros used in mono-io-portability.c

2009-03-16  Marek Habersack  <mhabersack@novell.com>

	* mod_mono.c (ensure_dashboard_initialized): do the XXGLOBAL
	detection based on the passed alias. Better fix for #476289

2009-03-14  Marek Habersack  <mhabersack@novell.com>

	* mod_mono.c (ensure_dashboard_initialized): takes an argument
	which tells it whether it's called as part of the XXGLOBAL (auto
	app) server and, if yes, turns off the dashboard attachment
	critical error which in this case is a false alarm. Fixes bug
	#476289

2009-03-08  Marek Habersack  <mhabersack@novell.com>

	* mod_mono.c (send_entire_file): attempts to map file name using
	mono_portability_find_file which is able to find files with the
	same name but different case if MONO_IOMAP is in effect.
	Added a new directive, MonoIOMAP which takes two parameters - the
	alias and MONO_IOMAP-style value (all/case/drive). This directive
	switches MONO_IOMAP on for that alias within mod_mono as well as